--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -2,9 +2,16 @@
     color: blue;
 }
 
+
+.container {
+    width: 90%;
+    margin: 0 auto;
+}
+
 .header {
+    padding: 1rem 0;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 a {
@@ -22,4 +29,6 @@ a {
 
 ul {
     display: flex;
+    gap: 1rem;
+    list-style: none;
 }
