--- a/src/components/Band.module.css
+++ b/src/components/Band.module.css
@@ -1,10 +1,10 @@
 .band {
     background-color: rgb(62, 160, 252);
-    height: 100px;
+    height: 15vh;
 }
 
 .container {
-    width: 90%;
+    width: 80%;
     margin: 0 auto;
     height: 100%;
     display: flex;
