--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -4,14 +4,15 @@
 
 
 .container {
-    width: 90%;
+    width: 80%;
     margin: 0 auto;
 }
 
 .header {
-    padding: 1rem 0;
+    padding: 2rem 0;
     display: flex;
     justify-content: space-between;
+    height: 15vh;
 }
 
 a {
@@ -29,6 +30,10 @@ a {
 
 ul {
     display: flex;
-    gap: 1rem;
+    gap: 2rem;
     list-style: none;
+}
+
+ul a {
+    font-weight: 700;
 }
