--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -9,9 +9,9 @@
 }
 
 .header {
-    padding: 2rem 0;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     height: 15vh;
 }
 
