--- a/src/components/ComicsList.module.css
+++ b/src/components/ComicsList.module.css
@@ -32,14 +32,25 @@ p {
 
 .card {
     width: 15%;
-}
-
-img {
-    width: 100%;
+    aspect-ratio: 0.8;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     overflow: hidden;
 }
 
-h2 {
-    font-weight: 300;
-    font-size: 0.7rem;
+.card img {
+  width: 100%;
+  height: 80%; 
+  object-fit: cover; 
+  object-position: top ;
+  border-radius: 4px;
+}
+
+.card h2 {
+  font-size: 0.75rem;
+  font-weight: 400;
+  margin-top: 8px;
+  text-transform: uppercase;
+  line-height: 1.2;
 }
