--- a/src/components/ComicsList.module.css
+++ b/src/components/ComicsList.module.css
@@ -6,6 +6,8 @@
     width: 80%;
     margin: 0 auto;
     display: flex;
+    flex-direction: column;
+    gap: 50px;
     align-items: center;
     justify-content: center;
     padding: 50px 0;
@@ -18,7 +20,7 @@ p {
 }
 
 .img {
-    height: 20vh;
+    height: 300px;
     background-image: url(/public/jumbotron.jpg);
     background-size:cover;
 }
@@ -53,4 +55,15 @@ p {
   margin-top: 8px;
   text-transform: uppercase;
   line-height: 1.2;
+}
+
+.btn {
+    background-color: rgb(62, 160, 252);
+    color: wheat;
+    padding: 10px 50px;
+}
+
+.btn a{
+    font-size: medium;
+    font-weight: 700;
 }
