--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -12,7 +12,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 15vh;
+    padding: 30px 0;
 }
 
 a {
@@ -35,5 +35,6 @@ ul {
 }
 
 ul a {
+    font-size: 0.7rem;
     font-weight: 700;
 }
